fix: fix z-index (#142)

--- a/style/web/components/table/_index.less
+++ b/style/web/components/table/_index.less
@@ -313,7 +313,7 @@
     .@{prefix}-table__header {
       width: fit-content;
       position: relative;
-      z-index: 10;
+      z-index: 5;
       background-color: @bg-color-secondarycontainer;
 
       tr {
